feat(text) : 한줄 넘을 경우 점처리 추가

--- a/app/src/main/res/layout/listitem_todo.xml
+++ b/app/src/main/res/layout/listitem_todo.xml
@@ -39,13 +39,16 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="10dp"
             android:text="title : "
+            android:ellipsize="end"
+            android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvId"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
